test/fails/bad_types/bad_if1.lgl
void main() {
    if (5) { print true; } else { print false; }
}